--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -83,6 +83,30 @@ h5 {
   border: 1px solid #ea6e4b;
 }
 
+.twitter-input {
+  margin-top: auto;
+  background-color: rgb(29, 155, 240, 0.6);
+  padding-left: 10px;
+  border-radius: $boxradius;
+
+  input {
+    width: 60%;
+    font-size: 20px;
+    margin: 10px;
+    padding: 3px;
+  }
+  label {
+    font-size: 20px;
+    padding: 5px;
+  }
+  button {
+    margin-top: auto;
+    font-size: 15px;
+    padding: 5px;
+    margin-right: 15px;
+  }
+}
+
 #icon {
   width: 40px;
   border-radius: $iconradius;
