--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -75,36 +75,45 @@ h5 {
 .twitterbox {
   border: 1px solid color(twitter);
 }
-
 .bvgbox {
   border: 1px solid #e9d021;
 }
 .wetterbox {
   border: 1px solid #ea6e4b;
 }
+.t-link {
+  &:hover {
+    background-color: rgb(29, 155, 240, 0.2);
+  }
+}
 
-.twitter-input {
+.input {
   margin-top: auto;
-  background-color: rgb(29, 155, 240, 0.6);
   padding-left: 10px;
   border-radius: $boxradius;
 
   input {
-    width: 60%;
-    font-size: 20px;
+    width: 40%;
+    font-size: 18px;
     margin: 10px;
     padding: 3px;
   }
   label {
-    font-size: 20px;
+    font-size: 18px;
     padding: 5px;
   }
   button {
     margin-top: auto;
-    font-size: 15px;
-    padding: 5px;
+    font-size: 18px;
+    padding: 3px;
     margin-right: 15px;
   }
+}
+.t-input {
+  background-color: rgb(29, 155, 240, 0.6);
+}
+.o-input {
+  background-color: rgb(234, 110, 75, 0.6);
 }
 
 #icon {
@@ -149,6 +158,11 @@ h5 {
     height: 250px;
     flex-direction: row;
     overflow-x: auto;
+  }
+  .input {
+    input {
+      width: 60%;
+    }
   }
 }
 
