--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -80,6 +80,19 @@ h4 {
     background-color: rgb(29, 155, 240, 0.2);
   }
 }
+// MAPBOX CSS
+.map-container {
+  height: 200px;
+}
+.marker {
+  background-image: url('../helpers/marker.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  opacity: 0.6;
+  height: 50px;
+  width: 50px;
+  cursor: pointer;
+}
 
 .input {
   margin-top: auto;
@@ -108,6 +121,9 @@ h4 {
 }
 .o-input {
   background-color: rgb(234, 110, 75, 0.6);
+}
+.m-input {
+  background-color: rgb(65, 100, 251, 0.6);
 }
 
 #icon {
@@ -147,6 +163,10 @@ h4 {
     flex-grow: 1;
     width: 27%;
   }
+
+  .mapbox {
+    width: 100%;
+  }
   .scrollable-x-div {
     display: flex;
     height: 250px;
@@ -166,17 +186,43 @@ h4 {
   p {
     font-size: 1.3em;
   }
+  .mapbox {
+    height: 400px;
+  }
+  .map-container {
+    height: 300px;
+  }
 }
 
 // media query for large desktops
 @media screen and (min-width: $desktop) {
   .twitterbox {
     width: 25%;
+    height: 320px;
+  }
+  .scrollable-y-div {
+    overflow-y: auto;
+    display: flex;
+    height: 260px;
+    flex-direction: column;
+  }
+  .scrollable-x-div {
+    height: 235px;
   }
   .bvgbox {
-    width: 25%;
+    width: 20%;
   }
   .wetterbox {
-    width: 25%;
+    width: 20%;
+    height: 320px;
   }
+  .mapbox {
+    height: 500px;
+  }
+  .map-container {
+    height: 400px;
+  }
+}
+
+@media screen and (min-width: $lgdesktop) {
 }
